--- a/frontend/src/index.mempool.html
+++ b/frontend/src/index.mempool.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mempool - Bitcoin Explorer</title>
+  <title>mempool - Dogecoin Explorer</title>
   <script src="/resources/config.js"></script>
   <base href="/">
 
-  <meta name="description" content="The Mempool Open Source Project™ - Explore the full Bitcoin ecosystem." />
+  <meta name="description" content="The Mempool Open Source Project™ - Explore the full Dogecoin ecosystem." />
   <meta property="og:image" content="https://mempool.space/resources/mempool-space-preview.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1000" />
@@ -16,7 +16,7 @@
   <meta property="twitter:site" content="@mempool">
   <meta property="twitter:creator" content="@mempool">
   <meta property="twitter:title" content="The Mempool Open Source Project™">
-  <meta property="twitter:description" content="Explore the full Bitcoin ecosystem with mempool.space™" />
+  <meta property="twitter:description" content="Explore the full Dogecoin ecosystem with mempool.space™" />
   <meta property="twitter:image:src" content="https://mempool.space/resources/mempool-space-preview.png" />
   <meta property="twitter:domain" content="mempool.space">
 
