--- a/frontend/src/index.mempool.html
+++ b/frontend/src/index.mempool.html
@@ -3,20 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mempool - Dogecoin Explorer</title>
+  <title>dogepool - Dogecoin Explorer</title>
   <script src="/resources/config.js"></script>
   <base href="/">
 
-  <meta name="description" content="The Mempool Open Source Project™ - Explore the full Dogecoin ecosystem." />
-  <meta property="og:image" content="https://mempool.space/resources/mempool-space-preview.png" />
+  <meta name="description" content="The Dogepool Open Source Project - Explore the full Dogecoin ecosystem." />
+  <meta property="og:image" content="https://dogepool.space/resources/dogepool-space-preview.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1000" />
   <meta property="og:image:height" content="500" />
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:site" content="@mempool">
   <meta property="twitter:creator" content="@mempool">
-  <meta property="twitter:title" content="The Mempool Open Source Project™">
-  <meta property="twitter:description" content="Explore the full Dogecoin ecosystem with mempool.space™" />
+  <meta property="twitter:title" content="The Mempool Open Source Project">
+  <meta property="twitter:description" content="Explore the full Dogecoin ecosystem with dogepool.space" />
   <meta property="twitter:image:src" content="https://mempool.space/resources/mempool-space-preview.png" />
   <meta property="twitter:domain" content="mempool.space">
 
@@ -25,7 +25,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicons/favicon-16x16.png">
   <link rel="manifest" href="/resources/favicons/site.webmanifest">
   <link rel="shortcut icon" href="/resources/favicons/favicon.ico">
-  <link id="canonical" rel="canonical" href="https://mempool.space">
+  <link id="canonical" rel="canonical" href="https://dogepool.space">
 
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="msapplication-TileColor" content="#000000">
