--- a/frontend/src/index.mempool.html
+++ b/frontend/src/index.mempool.html
@@ -7,7 +7,7 @@
   <script src="/resources/config.js"></script>
   <base href="/">
 
-  <meta name="description" content="The Dogepool Open Source Project - Explore the full Dogecoin ecosystem." />
+  <meta name="description" content="dogepool - Your Gateway to explore Dogecoin's Blockchain." />
   <meta property="og:image" content="https://dogepool.space/resources/dogepool-space-preview.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1000" />
@@ -15,9 +15,9 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:site" content="@mempool">
   <meta property="twitter:creator" content="@mempool">
-  <meta property="twitter:title" content="The Mempool Open Source Project">
-  <meta property="twitter:description" content="Explore the full Dogecoin ecosystem with dogepool.space" />
-  <meta property="twitter:image:src" content="https://mempool.space/resources/mempool-space-preview.png" />
+  <meta property="twitter:title" content="dogepool">
+  <meta property="twitter:description" content="Your Gateway to explore Dogecoin's Blockchain with dogepool.space" />
+  <meta property="twitter:image:src" content="https://dogepool.space/resources/mempool-space-preview.png" />
   <meta property="twitter:domain" content="mempool.space">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
