--- a/frontend/src/index.mempool.html
+++ b/frontend/src/index.mempool.html
@@ -28,9 +28,9 @@
   <link id="canonical" rel="canonical" href="https://dogepool.space">
 
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="msapplication-TileColor" content="#171717">
   <meta name="msapplication-config" content="/resources/favicons/browserconfig.xml">
-  <meta name="theme-color" content="#1d1f31">
+  <meta name="theme-color" content="#1f1f1f">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
